- minor m_kick tweak.
- Fixed bug in /silence regarding cloaked hosts, reported by kuwatog (#0001157).
- Fixed a problem with a Sleep call on win32
- Rewrote the /stats system. The new system allows for long flags for example
  /stats gline to list glines rather than just /stats G (old flags are still
  supported). Additionally, for glines an extended syntax is now supported allowing
  more refined searches. /stats G +m *@*.aol.com lists only glines that match that 
  mask. For more info do /stats ?. 
- Added stats flags for except throttle and ban version blocks
- stats bugfixes: a null pointer crash and a '/stats k' bug.
- Fixed a couple of problems in the new stats system
- Fixed another stats problem, reported by Angrywolf (#0001163)
- Rewrote the usermode module interface to be more stable and consistent with other
  module functions. New functions are UmodeAdd and UmodeDel (backwards compatibility
  is available for the old functions).
- Fixed a bug in the snomask and umode system dealing with removing flags
- Added two module functions ModuleGetOptions and ModuleSetOptions to retrieve/toggle
  module options
- Fixed a bug effecting +k/+L where you could /mode #chan +k test, /mode #chan +k test
  and each time it would send a mode change (#0001170) reported by Airnike.
- A few documentation updates/fixes
- 005 CHANMODES= set back to original value before extcmode merge
- made some functions in channel.c non-static so module coders
  can use them (they are not defined in the header files [yet] however).
- fixed 2 minor oob write issues
- Fixed a bug with stats l/L
- Updated example.conf with a more strict default oper-only-stats.
- Made '/stats S' and '/stats Z' oper only again (always).
- Hopefully fixed incoming/outgoing rate in /stats T. Only the stats of the first
  listener was counted instead of the total. This also explains why on some (many?)
  ircd configurations it always showed 0.00 kb/s and why HTM (high traffic mode)
  was never kicking in.